--- a/infrastructure/secrets/tls/global-cm/readme
+++ b/infrastructure/secrets/tls/global-cm/readme
@@ -1,3 +1,3 @@
-Add TLS certificate for cm.globalhost host to this folder:
+Add TLS certificate for cm.master.globalhost host to this folder:
     tls.crt
     tls.key
