--- a/infrastructure/secrets/tls/global-cd/readme
+++ b/infrastructure/secrets/tls/global-cd/readme
@@ -1,3 +1,3 @@
-Add TLS certificate for cd.master.globalhost host to this folder:
+Add TLS certificate for cd.test-branch.globalhost host to this folder:
     tls.crt
     tls.key
