--- a/infrastructure/secrets/tls/global-id/readme
+++ b/infrastructure/secrets/tls/global-id/readme
@@ -1,3 +1,3 @@
-Add TLS certificate for id.master.globalhost host to this folder:
+Add TLS certificate for id.issue-001.globalhost host to this folder:
     tls.crt
     tls.key
